@@ -1,0 +1,97 @@
+<!doctype html>
+<!--[if lt IE 7 ]> <html class="no-js ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="no-js ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="no-js ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="content-script-type" content="text/javascript" />
+  <meta http-equiv="content-style-type" content="text/css" />
+
+  <title>Buzz Slide</title>
+  <meta name="description" content="">
+  <meta name="author" content="Shigeru Kitazaki">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="bootstrap-1.4.0.min.css?v=2">
+
+</head>
+
+<body>
+
+  <div class="container">
+    <header>
+      <div class="page-header">
+        <h1>Buzz Slide <small>trashed items in Google Buzz</small></h1>
+        <ul id="navi">
+        </ul>
+      </div>
+    </header>
+
+    <div class="content" role="main">
+      <div class="row">
+        <ul class="tabs" id="slide-list"></ul>
+      </div>
+      <div class="row">
+        <div id="screen"></div>
+      </div>
+    </div>
+
+    <footer>
+    Created by Shigeru Kitazaki -
+      <a href="http://twitter.com/kshigeru">@kshigeru</a>
+    </footer>
+  </div>
+
+  <script id="slide-list-template" type="text/x-jquery-tmpl">
+    <li><a href="${file}" data-date="${date}">${name}</a></li>
+  </script>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
+  <script>window.jQuery || document.write('<script src="jquery-1.7.min.js">\x3C/script>')</script>
+  <script src="jquery.tmpl.min.js"></script>
+  <script>
+    $(function() {
+      $.getJSON("files.json", function(data) {
+        var slides = [];
+        $(data).each(function() {
+          // XXX: parse date and time.
+          var t = this.substring(0, 19).split("-");
+          slides.push({"file": this.toString(),
+                       "name": t[0] + "/" + t[1] + "/" + t[2] + " " + t[3] + ":" + t[4],
+                       "date": this.substring(0, 10)});
+        });
+        function pickup() {
+          var len = slides.length;
+          return slides[Math.floor(Math.random() * len)];
+        }
+        $("#screen").load(pickup()["file"]);
+        setInterval(function() {
+          $("#screen").load(pickup()["file"]);
+        }, 6000);
+        function update() {
+          var dt = [];
+          for (var j = 0; j < 6; j++) {
+              dt.push(pickup());
+          }
+          $("#slide-list").empty();
+          $("#slide-list-template").tmpl(dt).appendTo("#slide-list");
+        }
+        update();
+        setInterval(function() {
+          update();
+        }, 20000);
+      });
+      $("#slide-list a").live("click", function(e) {
+        e.preventDefault();
+        $("#screen").load($(this).attr("href"));
+        // XXX: freshen auto update timer.
+      });
+    });
+  </script>
+
+<!-- vim: set et sw=2 ts=2 fileencoding=utf-8 : -->
+</body>
+</html>
