@@ -1,3 +1,7 @@
+2011-11-17: buzz-slide.html
+
+	* Google Buzz からエクスポートした HTML のスライドショー。
+
 2011-10-21: ec2setenv.sh nodejs-setenv.sh
 
 	* EC2 と Node.JS のアクティベーションスクリプト。
